src/test/ui/feature-gates/feature-gate-unboxed-closures-manual-impls.stderr
error[E0658]: rust-call ABI is subject to change (see issue #29625)
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:10:5
   |
LL |     extern "rust-call" fn call(self, args: ()) -> () {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unboxed_closures)] to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change (see issue #29625)
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:15:5
   |
LL |     extern "rust-call" fn call_once(self, args: ()) -> () {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unboxed_closures)] to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change (see issue #29625)
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:20:5
   |
LL |     extern "rust-call" fn call_mut(&self, args: ()) -> () {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unboxed_closures)] to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change (see issue #29625)
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:25:5
   |
LL |     extern "rust-call" fn call_once(&self, args: ()) -> () {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unboxed_closures)] to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
